# boomer-shooter-fork

./: .gitignore  .gitmodules  .luarc.json  .sconsign.dblite  CMakeLists.txt  LICENSE  Makefile  README.md  bse.cmake  bsecore.cmake  bseopengl.cmake  build.lua  build.sh  compile_flags.txt  fdefault.glsl  ffbdraw.glsl  ftest.glsl  main.c  vdefault.glsl  vfbdraw.glsl  vtest.glsl
core/: color.c  color.h  engine.c  engine.h  image.c  image.h  include.c  include.h  input.h  key.h  key_def.h  log.c  log.h  mem.h  prng.h  timer.c  timer.h  vfs.c  vfs.h
core/gfx/: backend.h  buffer_object.c  buffer_object.h  framebuffer.c  framebuffer.h  gfx.c  gfx.h  mesh.c  mesh.h  shader.c  shader.h  texture.c  texture.h  vertex_array.c  vertex_array.h
core/gfx/opengl/: gl_buffer_object.c  gl_buffer_object.h  gl_framebuffer.c  gl_framebuffer.h  gl_gfx.c  gl_gfx.h  gl_shader.c  gl_shader.h  gl_texture.c  gl_texture.h  gl_type_conv.c  gl_type_conv.h  gl_vertex_array.c  gl_vertex_array.h
core/had/core/: init.lua
core/had/res/: fdefault.glsl  vdefault.glsl
core/math/: mat4.c  mat4.h  transform.c  transform.h  vec2f.h  vec2i.h  vec3f.h  vec3i.h  vec4f.h  vec4i.h
core/wrap/: wrap.c  wrap.h  wrap_engine.c  wrap_enums.c  wrap_log.c  wrap_mat4.c  wrap_mesh.c  wrap_prng.c  wrap_shader.c  wrap_texture.c  wrap_vertex_format.h
engine/: color.h  context.c  context.h  engine.c  engine.h  exit_codes.h  image.c  image.h  image_format.h  include.c  include.h  key.h  key_def.h  keys.h  log.c  log.h  luawrap.c  luawrap.h  main.c  material.c  material.h  mem.h  mesh.c  mesh.h  model.h  prng.c  prng.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h
engine/gfx/: buffer_object.h  framebuffer.h  gfx.h  gfx_types.c  gfx_types.h  mesh.c  mesh.h  shader.c  shader.h  texture.c  texture.h  vertex_array.c  vertex_array.h
engine/gfx/opengl/: gl_buffer_object.c  gl_buffer_object.h  gl_framebuffer.c  gl_framebuffer.h  gl_gfx.c  gl_shader.c  gl_shader.h  gl_texture.c  gl_vertex_array.c
engine/lua/: wrap_context.c  wrap_input.c  wrap_log.c  wrap_material.c  wrap_mesh.c  wrap_prng.c  wrap_texture.c
engine/math/: defs.h  mat4.c  mat4.h  transform.c  transform.h  vec2f.h  vec2i.h  vec3f.h  vec3i.h  vec4f.h  vec4i.h
engine/wrap/: wrap.c  wrap.h  wrap_engine.c  wrap_log.c  wrap_mat4.c  wrap_mesh.c  wrap_mesh_format.c  wrap_prng.c  wrap_shader.c  wrap_texture.c  wrap_vertex_format.c
game/: main.lua
game/core/: LerpedNumber.lua
game/res/fgd/: world.fgd
game/res/textures/: test.wad
lib/: luajit.cmake
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
opengl/: gl_buffer_object.c  gl_framebuffer.c  gl_framebuffer.h  gl_gfx.c  gl_shader.c  gl_texture.c  gl_vertex_array.c  gl_vertex_array.h
res/: level1_1.map
res/fgd/: info_player_start.fgd  light.fgd
textures/: enemy_test.ase
